crates/keron-lang/tests/corpus/errors/parse/for_no_body.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected end of input, expected `!`, `(`, `*`, `+`, `-`, `.`, `/`, `<`, `=`, `>`, or block
  --> 3:1
  |
3 | 
  | ^
